added show form to html

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -10,6 +10,34 @@
 <body>
     <h1>Couch Potato</h1>
 
+    <div id="add-button-form">
+        <button>Add New Show</button>
+    </div>
+
+    <div id="form-section">
+        <form id="add-show-form">
+            <label for="title">Title</label>
+            <input type="text" id="title">
+            <br>
+            <label for="network">Network</label>
+            <input type="text" id="Network">
+            <br>
+            <label for="year">Year</label>
+            <input type="text" id="year">
+            <br>
+            <label for="season">Seasons</label>
+            <input type="text" id="season">
+            <br>
+            <label for="image-link">Image URL</label>
+            <input type="text" id="image-link">
+            <br>
+            <label for="rating">Rating (0-5)</label>
+            <input type="text" id="rating">
+            <br>
+            <input type="submit">
+        </form>
+    </div>
+
     <script src="javascripts/index.js" ></script>
 </body>
 </html>
