added genre js and event listener for DOMContentLoaded

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -34,9 +34,17 @@
             <label for="rating">Rating (0-5)</label>
             <input type="text" id="rating">
             <br>
-            <input type="submit">
+            <input type="submit"> 
         </form>
     </div>
+
+
+    <h2> Pick a Genre!</h2>
+
+    <div id="genre-list"></div>
+
+    
+    
 
     <script src="javascripts/index.js" ></script>
 </body>
