--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Couch Potato</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body>
     <h1>Couch Potato</h1>
@@ -44,8 +44,8 @@
     <div id="genre-list"></div>
 
     
-    
-
+    <script src="javascripts/genre.js" ></script>
+    <script src="javascripts/show.js" ></script>
     <script src="javascripts/index.js" ></script>
 </body>
 </html>
